...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddStoryActivity">

    <Button
        android:id="@+id/btn_cameraX"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="18dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
...
        android:gravity="start"
        android:hint="@string/enter_your_story"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="#454040"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_submitStory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_submitStory"
        android:layout_width="wrap_content"
...
