...
            android:id="@+id/img_detail_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:transitionName="image"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_user"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_user"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_user"
...
